# eye-ik

./: .envrc  .gitignore  Cargo.toml  build.rs  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: ik.rs  leg.rs  lib.rs  main.rs  pwm.rs  servo.rs
